# level-editor

./: .gitignore  Cargo.toml
lvl-bsp/: Cargo.toml
lvl-bsp/src/: bounding_box.rs  lib.rs  mesh.rs  node.rs  triangle.rs  vertex_list.rs
lvl-core/: Cargo.toml
lvl-core/src/: context.rs  gfx.rs  lib.rs  looper.rs  perf.rs  resource.rs  scene.rs
lvl-core/src/context/: driver.rs  input.rs  phases.rs  screen_size.rs  time.rs
lvl-core/src/context/phases/: common.rs  late_update.rs  render.rs  update.rs
lvl-core/src/context/phases/render/: collects.rs  render_command.rs  render_pmx_model_renderer.rs  render_static_mesh_renderer.rs
lvl-core/src/gfx/: depth_stencil.rs  elements.rs  frame.rs  gfx_context.rs  global_texture_set.rs  glyph.rs  instance_data_provider.rs  per_frame_buffer_pool.rs  uniform_bind_group_provider.rs
lvl-core/src/gfx/elements/: font.rs  material.rs  mesh_layout.rs  pmx_model.rs  pmx_model_animation.rs  shader.rs  shader_reflection.rs  sprite.rs  static_mesh.rs  texture.rs
lvl-core/src/gfx/elements/pmx_model/: morph.rs
lvl-core/src/gfx/glyph/: glyph_layout.rs  glyph_texture.rs  sdf_gen.rs
lvl-core/src/looper/: loop_window.rs  vsync.rs
lvl-core/src/perf/: perf_recorder.rs
lvl-core/src/scene/: components.rs  hierarchy.rs
lvl-core/src/scene/components/: camera.rs  light.rs  pmx_model_animator.rs  pmx_model_renderer.rs  static_mesh_renderer.rs  static_mesh_renderer_group.rs  ui_element.rs  ui_glyph_renderer.rs  ui_scaler.rs  ui_sprite_renderer.rs
lvl-core/src/scene/components/pmx_model_animator/: bind_pose_bone_set.rs  bone_bind_transform_set.rs
lvl-core/src/scene/hierarchy/: any_component.rs  component.rs  component_id.rs  component_id_allocator.rs  controller.rs  object.rs  object_id.rs  object_id_allocator.rs  read_only_scene_proxy.rs  scene.rs  scene_proxy.rs  storage.rs  transform.rs
lvl-core/src/scene/hierarchy/scene/: ui.rs
lvl-core/src/scene/hierarchy/storage/: controller_storage.rs  event_receiver_storage.rs  hierarchy_storage.rs  object_storage.rs
lvl-math/: Cargo.toml
lvl-math/src/: lib.rs  mat4.rs  plane.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
lvl-pmx/: Cargo.toml
lvl-pmx/src/: lib.rs  pmx_bone.rs  pmx_indices.rs  pmx_material.rs  pmx_morph.rs  pmx_vertex.rs  primitives.rs
lvl-resource/: Cargo.toml
lvl-resource-compiler/: Cargo.toml
lvl-resource-compiler/assets/: non-textured.wgsl  standard-full.wgsl  standard-no-env.wgsl  standard-no-toon-no-env.wgsl  standard-no-toon.wgsl  standard.wgsl  textured.wgsl
lvl-resource-compiler/builtins/: builtin-instance-input.wgsl  builtin-uniforms.wgsl
lvl-resource-compiler/src/: cli.rs  main.rs  processors.rs  resource_processor.rs
lvl-resource-compiler/src/cli/: compile.rs
lvl-resource-compiler/src/processors/: model_processor.rs  pmx_model_animation_processor.rs  pmx_model_processor.rs  shader_processor.rs  texture_processor.rs
lvl-resource-compiler/src/processors/shader_processor/: reflection.rs  template.rs
lvl-resource/src/: lib.rs  material_source.rs  mesh_source.rs  model_source.rs  pmx_model_animation_source.rs  pmx_model_source.rs  shader_source.rs  sprite_source.rs  texture_source.rs
lvl-vmd/: Cargo.toml
src/: bsp.rs  context.rs  driver_impl.rs  gfx.rs  looper.rs  main.rs  object.rs
test/: first.lvldef
(+19 files in other folders)
