[package]
name = "level-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lvl-bsp = { path = "lvl-bsp" }
lvl-math = { path = "lvl-math" }
lvl-pmx = { path = "lvl-pmx" }
pollster = "0.3"
thiserror = "1"
wgpu = "0.19"
winit = "0.29"
zerocopy = { version = "0.7", features = ["derive"] }

[workspace]
members = ["lvl-bsp", "lvl-math", "lvl-pmx"]
