[package]
name = "lvl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
bitvec = "1"
lvl-math = { path = "../lvl-math" }
lvl-resource = { path = "../lvl-resource" }
parking_lot = "0.12"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
string-interner = "0.17"
thiserror = "1"
wgpu = "0.19"
winit = "0.29"
zerocopy = { version = "0.7" }
