[package]
name = "lvl-resource-compiler"
description = "resource compiler for level editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1"
clap = "4"
env_logger = "0.11"
gitignore = "1.0.8"
image = "0.25"
log = "0.4"
lvl-math = { path = "../lvl-math" }
lvl-pmx = { path = "../lvl-pmx" }
lvl-resource = { path = "../lvl-resource" }
lvl-vmd = { path = "../lvl-vmd" }
naga = { version = "0.19", features = ["wgsl-in", "wgsl-out"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu-types = { version = "0.19", features = ["replay", "trace"] }
zerocopy = { version = "0.7" }
